// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewProjectView renders a card with a form ready to be submitted to create a new project 1`] = `
<div
  className="newprojectview"
>
  <div
    className="card newprojectcard"
  >
    <div
      style={
        Object {
          "paddingBottom": "16px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="text l semibold hideoverflow"
      >
        New Project
      </div>
    </div>
    <div
      className="card-divider"
    />
    <form
      className="form"
      onSubmit={[Function]}
    >
      <div
        style={
          Object {
            "paddingBottom": "16px",
            "paddingLeft": "16px",
            "paddingRight": "16px",
            "paddingTop": "16px",
          }
        }
      >
        <div
          className="errorgroup"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          />
        </div>
        <div
          className="field"
        >
          <div
            style={
              Object {
                "paddingBottom": "16px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": undefined,
              }
            }
          >
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": undefined,
                  "paddingRight": undefined,
                  "paddingTop": undefined,
                }
              }
            >
              <label
                className="label body-l"
                htmlFor="name"
              >
                Name
              </label>
            </div>
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": undefined,
                  "paddingRight": undefined,
                  "paddingTop": undefined,
                }
              }
            >
              <p
                className="description caption-m"
              >
                The name of the project can only contain letters and numbers separated by dots, dashes or underscores.
              </p>
            </div>
            <input
              className="textfield"
              id="name"
              name="name"
              onChange={[Function]}
              placeholder="Enter the name"
              type="text"
              value="sirius"
            />
            <div
              className="errorgroup"
            >
              <div
                style={
                  Object {
                    "paddingBottom": "8px",
                    "paddingLeft": undefined,
                    "paddingRight": undefined,
                    "paddingTop": "8px",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div
          className="actiongroup"
        >
          <div
            style={
              Object {
                "paddingBottom": undefined,
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "16px",
              }
            }
          >
            <button
              className="button button--primary"
            >
              <div
                style={
                  Object {
                    "paddingBottom": undefined,
                    "paddingLeft": "16px",
                    "paddingRight": "16px",
                    "paddingTop": undefined,
                  }
                }
              >
                <div
                  className="button-container"
                >
                  <div
                    className="loading button-loadingindicator"
                  >
                    <div />
                    <div />
                    <div />
                  </div>
                  <div
                    className="text s semibold button-label"
                  >
                    Create Project
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewProjectView renders a card with a unsubmittable form to create a new project 1`] = `
<div
  className="newprojectview"
>
  <div
    className="card newprojectcard"
  >
    <div
      style={
        Object {
          "paddingBottom": "16px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="text l semibold hideoverflow"
      >
        New Project
      </div>
    </div>
    <div
      className="card-divider"
    />
    <form
      className="form"
      onSubmit={[Function]}
    >
      <div
        style={
          Object {
            "paddingBottom": "16px",
            "paddingLeft": "16px",
            "paddingRight": "16px",
            "paddingTop": "16px",
          }
        }
      >
        <div
          className="errorgroup"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          />
        </div>
        <div
          className="field"
        >
          <div
            style={
              Object {
                "paddingBottom": "16px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": undefined,
              }
            }
          >
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": undefined,
                  "paddingRight": undefined,
                  "paddingTop": undefined,
                }
              }
            >
              <label
                className="label body-l"
                htmlFor="name"
              >
                Name
              </label>
            </div>
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": undefined,
                  "paddingRight": undefined,
                  "paddingTop": undefined,
                }
              }
            >
              <p
                className="description caption-m"
              >
                The name of the project can only contain letters and numbers separated by dots, dashes or underscores.
              </p>
            </div>
            <input
              className="textfield"
              id="name"
              name="name"
              onChange={[Function]}
              placeholder="Enter the name"
              type="text"
              value=""
            />
            <div
              className="errorgroup"
            >
              <div
                style={
                  Object {
                    "paddingBottom": "8px",
                    "paddingLeft": undefined,
                    "paddingRight": undefined,
                    "paddingTop": "8px",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div
          className="actiongroup"
        >
          <div
            style={
              Object {
                "paddingBottom": undefined,
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "16px",
              }
            }
          >
            <button
              className="button button--primary"
            >
              <div
                style={
                  Object {
                    "paddingBottom": undefined,
                    "paddingLeft": "16px",
                    "paddingRight": "16px",
                    "paddingTop": undefined,
                  }
                }
              >
                <div
                  className="button-container"
                >
                  <div
                    className="loading button-loadingindicator"
                  >
                    <div />
                    <div />
                    <div />
                  </div>
                  <div
                    className="text s semibold button-label"
                  >
                    Create Project
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewProjectView renders a redirect component once the project has been created 1`] = `null`;

exports[`NewProjectView renders an error card for an unsupported state 1`] = `
<div
  className="card errorcard"
>
  <div
    style={
      Object {
        "paddingBottom": "32px",
        "paddingLeft": "32px",
        "paddingRight": "32px",
        "paddingTop": "32px",
      }
    }
  >
    <div
      className="errorcard-container"
    >
      <div
        style={
          Object {
            "paddingBottom": "16px",
            "paddingLeft": "16px",
            "paddingRight": "16px",
            "paddingTop": "16px",
          }
        }
      >
        <h1
          className="title-l"
        >
          The new project page is in an unsupported state: INITIAL__STATE
        </h1>
      </div>
      <p>
        Contact your administrator to find a suitable solution (code: 1001)
      </p>
    </div>
  </div>
</div>
`;

exports[`NewProjectView renders errors message 1`] = `
<div
  className="newprojectview"
>
  <div
    className="card newprojectcard"
  >
    <div
      style={
        Object {
          "paddingBottom": "16px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="text l semibold hideoverflow"
      >
        New Project
      </div>
    </div>
    <div
      className="card-divider"
    />
    <form
      className="form"
      onSubmit={[Function]}
    >
      <div
        style={
          Object {
            "paddingBottom": "16px",
            "paddingLeft": "16px",
            "paddingRight": "16px",
            "paddingTop": "16px",
          }
        }
      >
        <div
          className="errorgroup"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          >
            <div
              className="error"
            >
              <div
                style={
                  Object {
                    "paddingBottom": undefined,
                    "paddingLeft": undefined,
                    "paddingRight": undefined,
                    "paddingTop": "8px",
                  }
                }
              >
                Project already exists
              </div>
            </div>
          </div>
        </div>
        <div
          className="field"
        >
          <div
            style={
              Object {
                "paddingBottom": "16px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": undefined,
              }
            }
          >
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": undefined,
                  "paddingRight": undefined,
                  "paddingTop": undefined,
                }
              }
            >
              <label
                className="label body-l"
                htmlFor="name"
              >
                Name
              </label>
            </div>
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": undefined,
                  "paddingRight": undefined,
                  "paddingTop": undefined,
                }
              }
            >
              <p
                className="description caption-m"
              >
                The name of the project can only contain letters and numbers separated by dots, dashes or underscores.
              </p>
            </div>
            <input
              className="textfield fielderror"
              id="name"
              name="name"
              onChange={[Function]}
              placeholder="Enter the name"
              type="text"
              value=":\\\\/."
            />
            <div
              className="errorgroup"
            >
              <div
                style={
                  Object {
                    "paddingBottom": "8px",
                    "paddingLeft": undefined,
                    "paddingRight": undefined,
                    "paddingTop": "8px",
                  }
                }
              >
                <div
                  className="error"
                >
                  <div
                    style={
                      Object {
                        "paddingBottom": undefined,
                        "paddingLeft": undefined,
                        "paddingRight": undefined,
                        "paddingTop": "8px",
                      }
                    }
                  >
                    Invalid name
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="actiongroup"
        >
          <div
            style={
              Object {
                "paddingBottom": undefined,
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "16px",
              }
            }
          >
            <button
              className="button button--primary"
            >
              <div
                style={
                  Object {
                    "paddingBottom": undefined,
                    "paddingLeft": "16px",
                    "paddingRight": "16px",
                    "paddingTop": undefined,
                  }
                }
              >
                <div
                  className="button-container"
                >
                  <div
                    className="loading button-loadingindicator"
                  >
                    <div />
                    <div />
                    <div />
                  </div>
                  <div
                    className="text s semibold button-label"
                  >
                    Create Project
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
